# Projet-L3-API-Parcoursup

./: AUTHORS  README
_build/: .db  .digest-db  log
_build/.aliases/default/test/parcoursup/: runtest-00000000000000000000000000000000
_build/.aliases/default/tests_perso/: runtest-00000000000000000000000000000000
_build/default/.dune/: configurator  configurator.v2
_build/default/.utop/: utop.ml-gen
_build/default/src/hello/: hello.cma  hello.cmxa
_build/default/src/mariages_stables/: algo_abstrait.ml  gale_shapley.ml  mariages_stables.cma  mariages_stables.cmxa
_build/default/src/parcoursup/: api.ml  parcoursup.cma  parcoursup.cmxa
_build/default/test/mariages_stables/: mariages_stables_prof_exemples.cmxa
_build/default/test/parcoursup/: test_parcoursup_utils.cmxa
_build/default/tests_perso/: test_parcoursup_utils2.cmxa  test_perso2.ml  test_perso2.output  test_perso3.expected  test_perso3.ml  test_perso4.ml  test_perso4.output  test_perso5.ml  test_perso6.ml  test_perso6.output  test_perso7.ml  test_perso8.output
_build/default/tests_perso/.merlin-conf/: exe-test_perso1-76211a3c0614aa9c2d7afd1d20cc2611  lib-test_parcoursup_utils2
_build/default/tests_perso/.test_perso1.eobjs/: test_perso1.ml.d  test_perso2.ml.d  test_perso3.ml.d  test_perso4.ml.d  test_perso5.ml.d  test_perso6.ml.d  test_perso7.ml.d  test_perso8.ml.d
src/mariages_stables/: definitions.ml  knuth.ml
test/parcoursup/: dune
tests_perso/: dune  test_perso1.expected  test_perso1.ml  test_perso5.expected  test_perso7.expected  test_perso8.ml
(+122 files in other folders)
